NGEO-2027: Fix cropProduct display in download options & on retrieve
Update css for table : add max col width parameter + break-word in case of long values

--- a/client/css/tableView.less
+++ b/client/css/tableView.less
@@ -60,6 +60,8 @@
     font-size: 12px;
     text-align: center;
 	border-right: 1px solid @table-border-color;
+	word-wrap: break-word;
+	max-width: 390px; /* Symbolic width to apply colgroup width, doesn't work otherwise... */
 }
 
 .table-view td:last-child {
